tests/invalid/If_Invalid_1.whiley
function f(int z) -> int:
    if z:
        return 1
    return 0
